--- a/cmake-build-teensy35/Makefile
+++ b/cmake-build-teensy35/Makefile
@@ -47,10 +47,10 @@ RM = "D:\clion\CLion 2020.1.2\bin\cmake\win\bin\cmake.exe" -E remove -f
 EQUALS = =
 
 # The top-level source directory on which CMake was run.
-CMAKE_SOURCE_DIR = D:\Doggo
+CMAKE_SOURCE_DIR = D:\github\doggo_modify
 
 # The top-level build directory on which CMake was run.
-CMAKE_BINARY_DIR = D:\Doggo\cmake-build-teensy35
+CMAKE_BINARY_DIR = D:\github\doggo_modify\cmake-build-teensy35
 
 #=============================================================================
 # Targets provided globally by CMake.
@@ -79,9 +79,9 @@ rebuild_cache/fast: rebuild_cache
 
 # The main all target
 all: cmake_check_build_system
-	$(CMAKE_COMMAND) -E cmake_progress_start D:\Doggo\cmake-build-teensy35\CMakeFiles D:\Doggo\cmake-build-teensy35\CMakeFiles\progress.marks
+	$(CMAKE_COMMAND) -E cmake_progress_start D:\github\doggo_modify\cmake-build-teensy35\CMakeFiles D:\github\doggo_modify\cmake-build-teensy35\CMakeFiles\progress.marks
 	$(MAKE) -f CMakeFiles\Makefile2 all
-	$(CMAKE_COMMAND) -E cmake_progress_start D:\Doggo\cmake-build-teensy35\CMakeFiles 0
+	$(CMAKE_COMMAND) -E cmake_progress_start D:\github\doggo_modify\cmake-build-teensy35\CMakeFiles 0
 .PHONY : all
 
 # The main clean target
